# xcdr

./: AUTHORS  BUGS  Doxyfile  Makefile  Makefile.in  README  TODO  aclocal.m4  autogen.sh  build  config.h  config.h.in  config.status  configure  configure.ac  libtool  xcdr.spec  xcdr.spec.in
doc/: 3RDPARTY  ACL  ALERTS  COPYRIGHT  HARDWARE  HIGHLEVEL  I18N-L10N  INSTALL  MAINTENANCE  NOTES  PROCESS  QUEUE  RATING  RDBMS  READER  SCHEMA  collab.dot  concept.dot  template.h
doc/manual/: DFD.ps  Makefile  algorithm2e.sty  authorization.tex  collection.aux  collection.tex  concepts_guide.aux  concepts_guide.dvi  concepts_guide.idx  concepts_guide.ilg  concepts_guide.ind  concepts_guide.loa  concepts_guide.lof  concepts_guide.out  concepts_guide.tex  concepts_guide.toc  eg3.tex  generator.dot  highlevel.aux  highlevel.tex  preface.aux  preface.tex  profile.dot  title.aux  title.tex  xcdr.sty
doc/model/: xcdr-schema.sql  xcdr-schema.xml  xcdr.xml
schema/: acl.sql  cdr.sql  customer.sql  destination.sql  flags.sql  host.sql  load-schema  mediator.sql  model.dtd  model.xml  node.sql  rate.sql  reader.sql  repository.dtd  repository.xml  tariff.sql  task.sql  test_flag.sql  timezone.sql  xcdr-model.xml
src/: Makefile  Makefile.am  Makefile.in
src/alert/: alert.cc
src/authsrv/: CONCEPT
src/common/: Makefile  Makefile.am  Makefile.in  common.cc  csv.cc  datetime.cc  entity.old  except.cc  filestream.cc  logging.cc  period.cc  pidfile.cc  strtok.cc  threshold.cc  timer.cc  util.cc  version.cc
src/engine/: Makefile  Makefile.am  Makefile.in  engine.cc
src/entity/: Makefile  Makefile.am  Makefile.in  entity.cc  util.cc
src/gateway/: Makefile  Makefile.in
src/gateway/sonus/: Makefile  Makefile.am  Makefile.in  callgen.cc  sonus.cc
src/include/alert/: alert.h
src/include/common/: activity.h  cdr.h  common.h  csv.h  datetime.h  dtrie.h  etypes.h  except.h  filestream.h  hamt.h  logging.h  parser.h  period.h  pidfile.h  slist.h  stack.h  stats.h  strtok.h  threshold.h  timer.h  ttree.h  util.h  version.h  version.h.in
src/include/engine/: engine.h
src/include/entity/: entity.h
src/include/gateway/: gateway.h
src/include/gateway/dco/: dco.h
src/include/gateway/mvam/: mvam.h
src/include/gateway/sonus/: sonus.h  sonus_records.h
src/include/mediator/: mediator.h
src/include/mediator/cache/: nodemap.h
src/include/radius/: radius.h
src/include/rater/: activity.h  avl.h  bracket.h  digit.h  except.h  ident.h  interval.h  party.h  period.h  query.h  rate.h  rater.h  response.h  tariff.h
src/include/rdbms/: base.h  cache.h  context.h  dream.h  model.h  query.h  rdbms.h  repository.h  sql.h  table.h
src/include/reader/: lfreader.h  reader.h
src/include/reader/cache/: nodemap.h  profile.h
src/include/telco/: dest.h
src/include/www/: handler.h
src/include/xml/: element.h  model.h  model.h.new  parser.h  repository.h  xml.h
src/mediator/: Makefile  Makefile.am  Makefile.in  mediator.cc
src/rater/: Makefile  Makefile.am  Makefile.in  charge.cc  except.cc  ident.cc  populate.cc  rater.cc  tok.h
src/rater/data/: country.txt  lata.txt  rates.txt
src/rdbms/: Makefile  Makefile.am  Makefile.in  base.cc  context.cc  model.cc  params.cc  query.cc  table.cc
src/reader/: Makefile  Makefile.am  Makefile.in  lfreader.cc  reader.cc
src/telco/: Makefile.am
src/util/: Makefile  Makefile.am  Makefile.in  seek.cc
src/util/console/: Makefile  Makefile.am  Makefile.in  TODO  command.cc  command.h  console.cc  console.h  context.cc  context.h  except.cc  exec.cc  exec.h  family.pl  help.cc  help.h  leak.out  list.cc  list.h  load.cc  load.h  lookup.cc  lookup.h  nani.pl  populate.cc  populate.h  rate.cc  rate.h  readline.h  script.xsc  size.cc  size.h  sql.cc  sql.h  tok.h  usage.cc  usage.h
src/util/console/data/: ocn.txt
src/util/lerg/: Makefile  Makefile.am  Makefile.in  TODO  common.h  lerg.cc  lerg.h  loc_info.cc  loc_info.h  loc_info.xml  main.cc  rmap.cc  rmap.h  tok.h  tzmap.h  writer.cc  writer.h
src/util/rmap/: Makefile  Makefile.am  Makefile.in  README  dump_lerg  lerg.cc  lerg.h  loc_info.cc  loc_info.h  loc_info.xml  main.cc  rmap.h  test.py  tok.h  tzmap.h
src/xml/: Makefile  Makefile.am  Makefile.in  element.cc  model.cc  model.cc.new  parser.cc  repository.cc  xml.cc
test/: .sql.cc.swp  Makefile  Makefile.am  Makefile.in  echo.py  en.txt  lookup.sql  model.xml  rating.sql  root.txt  test_dtrie.cc  test_period.cc  test_rater.cc  test_stream.cc  test_threshold.cc  test_timing.cc  test_tok.cc  test_ttree.cc  test_xml.cc  testmodel.xml  xcdr_reader_common.mak  xcdr_reader_root.res  xcdrd.cc
test/data/: province.txt  timezone.txt
xcdrmon/: Makefile  application.cc  application.h  build.conf  main.cc  monitor.cc  monitor.h  xcdrmon.cc
